[package]
name = "yangon"
version = "0.0.8"
edition = "2021"
authors = ["ruster sai <rustersai@gmail.com>"]
description = "A high-performance, stack-allocated string type for Rust with fixed capacity and zero heap allocations"
license = "MIT"
repository = "https://github.com/rustersai/yangon"
homepage = "https://github.com/rustersai/yangon"
readme = "README.md"
categories = ["data-structures", "text-processing"]

[dependencies]


[features]
default = []

[dev-dependencies]


[profile.release]
opt-level = 3
lto = true         
codegen-units = 1 
panic = "abort"    
strip = true
